--- a/CryptoPortfolioApp/Views/Currencies/Create.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Create.cshtml
@@ -4,15 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Currency</h4>
+<h2>Create New Currency Entry</h2>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <select asp-for="Name" class="form-control">
@@ -24,26 +22,29 @@
                     <option value="Dogecoin">Dogecoin</option>
                     <option value="USD-Coin">USD-Coin</option>
                     <option value="Cardano">Cardano</option>
-                    <option value="Polygon">Polygon</option>
+                    <option value="Tether">Tether</option>
                     <option value="Solana">Solana</option>
+                    <option value="Litecoin">Litecoin</option>
+                    <option value="Dash">Dash</option>
+                    <option value="Monero">Monero</option>
+                    <option value="Maker">Maker</option>
+                    <option value="Cosmos">Cosmos</option>
                 </select>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group" style="margin-top: 10px">
+                <a asp-action="Index" asp-controller="Currencies">
+                    <input type="button" class="btn btn-secondary" value="Back" />
+                </a>
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
