--- a/CryptoPortfolioApp/Views/Currencies/Delete.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Delete.cshtml
@@ -4,12 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h2>Confirm Currency Deletion</h2>
+<hr/>
 <div>
-    <h4>Currency</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -48,10 +45,11 @@
             @Html.DisplayFor(model => model.DailyChange)
         </dd>
     </dl>
-    
     <form asp-action="Delete">
+        <a asp-action="Index" asp-controller="Currencies">
+            <input type="button" class="btn btn-secondary" value="Back" />
+        </a>
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
 </div>
