--- a/CryptoPortfolioApp/Views/Currencies/Edit.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Edit.cshtml
@@ -4,54 +4,36 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>Currency</h4>
+<h2>Update Currency Quantity</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Name" />
+            <input type="hidden" asp-for="OwnerName" />
+            <input type="hidden" asp-for="Value" />
+            <input type="hidden" asp-for="PortfolioValue" />
+            <input type="hidden" asp-for="DailyChange" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" readonly />
                 <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="OwnerName" class="control-label"></label>
-                <input asp-for="OwnerName" class="form-control" />
-                <span asp-validation-for="OwnerName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Value" class="control-label"></label>
-                <input asp-for="Value" class="form-control" />
-                <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
                 <input asp-for="Quantity" class="form-control" />
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PortfolioValue" class="control-label"></label>
-                <input asp-for="PortfolioValue" class="form-control" />
-                <span asp-validation-for="PortfolioValue" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DailyChange" class="control-label"></label>
-                <input asp-for="DailyChange" class="form-control" />
-                <span asp-validation-for="DailyChange" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group" style="margin-top: 10px">
+                <a asp-action="Index" asp-controller="Currencies">
+                    <input type="button" class="btn btn-secondary" value="Back" />
+                </a>
+                <input type="submit" value="Save" class="btn btn-info" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
