--- a/CryptoPortfolioApp/Views/Currencies/Index.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Index.cshtml
@@ -4,20 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container row">
-    <a class="col-6" asp-action="Create">
-        <input type="button" class="btn btn-outline-success" value="Add Entry" />
-    </a>
-    <form class="col-3 row" asp-controller="Currencies" asp-action="Index">
-        <div class="col">
-            <input type="text" class="form-control" name="SearchString" placeholder="Currency Name"/>
-        </div>
-        <div class="col">
-            <input type="submit" class="btn btn-secondary" value="Filter" />
-        </div>
-    </form>
-</div>
 
+<form class="input-group mb-3" asp-controller="Currencies" asp-action="Index">
+    <a style="margin-right: 50%" asp-controller="Currencies" asp-action="Create">
+        <input type="button" class="btn btn-success" value="Add Currency" />
+    </a>
+    <input type="text" class="form-control" name="searchString" placeholder="Currency Name">
+    <button type="submit" class="btn btn-secondary">Search</button>
+</form>
 
 <table class="table table-bordered">
     <thead class="table-dark">
