--- a/CryptoPortfolioApp/Views/Shared/_LoginPartial.cshtml
+++ b/CryptoPortfolioApp/Views/Shared/_LoginPartial.cshtml
@@ -6,21 +6,27 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+        <a  class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <input type="button" class="btn btn-outline-light" value="@User.Identity?.Name"/>
+        </a>
     </li>
     <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-light">Logout</button>
-        </form>
+        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Currencies", new { area = "" })">
+            <input type="button" class="btn btn-outline-light" value="Log Out"/>
+        </a>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">
+            <input type="button" class="btn btn-outline-light" value=" Log In "/>
+        </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">
+            <input type="button" class="btn btn-light" value="Sign Up"/>
+        </a>
     </li>
 }
 </ul>
