Improved UI of Forms

--- a/CryptoPortfolioApp/Views/Currencies/Index.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Index.cshtml
@@ -9,7 +9,7 @@
     <a style="margin-right: 50%" asp-controller="Currencies" asp-action="Create">
         <input type="button" class="btn btn-success" value="Add Currency" />
     </a>
-    <input type="text" class="form-control" name="searchString" placeholder="Currency Name">
+    <input type="text" class="form-control" name="searchString" placeholder="Search Portfolio">
     <button type="submit" class="btn btn-secondary">Search</button>
 </form>
 
