--- a/CryptoPortfolioApp/Views/Currencies/Delete.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Delete.cshtml
@@ -4,52 +4,54 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Confirm Currency Deletion</h2>
-<hr/>
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OwnerName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OwnerName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Value)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Value)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PortfolioValue)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PortfolioValue)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DailyChange)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DailyChange)
-        </dd>
-    </dl>
-    <form asp-action="Delete">
-        <a asp-action="Index" asp-controller="Currencies">
-            <input type="button" class="btn btn-secondary" value="Back" />
-        </a>
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-    </form>
+<div class="row justify-content-md-center">
+    <div class="col-md-4">
+        <h3 style="text-align:center">Confirm Deletion</h3>
+        <hr />
+        <form class="form-control bg-light" asp-action="Delete">
+            <dl class="row">
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.OwnerName)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.OwnerName)
+                </dd>
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.Value)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.Value)
+                </dd>
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.Quantity)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.Quantity)
+                </dd>
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.PortfolioValue)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.PortfolioValue)
+                </dd>
+                <dt class="col-sm-5">
+                    @Html.DisplayNameFor(model => model.DailyChange)
+                </dt>
+                <dd class="col-sm-7">
+                    @Html.DisplayFor(model => model.DailyChange)
+                </dd>
+            </dl>
+            <a asp-action="Index" asp-controller="Currencies">
+                <input type="button" class="btn btn-secondary" value="Back" />
+            </a>
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
 </div>
