--- a/CryptoPortfolioApp/Views/Currencies/Edit.cshtml
+++ b/CryptoPortfolioApp/Views/Currencies/Edit.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Update Currency Quantity</h2>
-<hr />
-<div class="row">
+<div class="row justify-content-md-center">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <h3>Update Quantity</h3>
+        <hr />
+        <form class="form-control bg-light" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Name" />
